--- a/bash/config
+++ b/bash/config
@@ -1,2 +1,8 @@
 export PS1="\w$ "
 export EDITOR="mate -w"
+
+export TERM="xterm-color"
+
+export PS1="\e[1;30m\][\e[\e[1;30m\]\e[1;33m\] \u@\H \[\e[1;32m\]\w\[\e[0m\] \e[1;30m\]]\n[\[ \e[1;31m\]\T\[\e[0m\]\e[1;30m\] ] > \e[37m\]"
+
+[[ -s $HOME/.rvm/scripts/rvm ]] && source $HOME/.rvm/scripts/rvm
