--- a/bash/config
+++ b/bash/config
@@ -3,6 +3,13 @@ export EDITOR="mate -w"
 
 export TERM="xterm-color"
 
-export PS1="\e[1;30m\][\e[\e[1;30m\]\e[1;33m\] \u@\H \[\e[1;32m\]\w\[\e[0m\] \e[1;30m\]]\n[\[ \e[1;31m\]\T\[\e[0m\]\e[1;30m\] ] > \e[37m\]"
 export CLICOLOR=1
 
+export grey="\e[1;30m\]"
+export white="\e[37m\]"
+export green="\e[1;32m\]"
+export red="\e[1;31m\]"
+export yellow="\e[1;33m\]"
+export reset="\[\e[0m\]"
+export blue="\e[0;36m\]"
+export PS1="$grey[ $blue\u@\H $grey] [ $yellow\w$reset $grey] [ $green\$(~/.rvm/bin/rvm-prompt) $grey]\n[ $red\T$reset $grey] > $white"
