--- a/bash/config
+++ b/bash/config
@@ -5,6 +5,8 @@ export TERM="xterm-color"
 
 export CLICOLOR=1
 
+export AUTOFEATURE=true
+
 export grey="\[\e[1;30m\]"
 export white="\[\e[37m\]"
 export green="\[\e[1;32m\]"
