--- a/bash/config
+++ b/bash/config
@@ -14,4 +14,4 @@ export red="\[\e[1;31m\]"
 export yellow="\[\e[1;33m\]"
 export reset="\[\e[0m\]"
 export blue="\[\e[0;36m\]"
-export PS1="$grey[ $blue\u@\H $grey] [ $yellow\w$reset $grey] [$red\$(__git_ps1) $grey] [ $green\$(/usr/local/rvm/bin/rvm-prompt) $grey]\n[ $red\T$reset $grey] > $white"
+export PS1="$grey[ $blue\u@\H $grey] [ $yellow\w$reset $grey] [$red\$(__git_ps1) $grey] [ $green\$(~/.rvm/bin/rvm-prompt) $grey]\n[ $red\T$reset $grey] > $white"
